--- a/templates/mytodo_index.html
+++ b/templates/mytodo_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlaskApp</title>
+    <title>Flask TODO</title>
     <style>
         .todo {
             padding: 20px;
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>FlaskTODO</h1>
+    <h1>Flask TODO</h1>
     <hr>
     <div class="content">
     <form method="post">
@@ -25,29 +25,40 @@
         </p>
 
         <p>
-            <b><label for="degree">Degree</label></b>
+            <b><label for="priority">Priority:</label></b>
         </p>
         <p>
-            <input id="degree-0" name="degree" required type="radio" value="Important">
-            <label for="degree-0">Important</label>
+            <select id="priority" name="priority">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+            </select>
+        </p>
+
+        <p>
+            <b><label for="status">Status:</label></b>
         </p>
         <p>
-            <input id="degree-1" name="degree" required type="radio" value="Unimportant">
-            <label for="degree-1">Unimportant</label>
+            <select id="status" name="status">
+                <option value="incomplete">Incomplete</option>
+                <option value="in progress">In Progress</option>
+                <option value="complete">Complete</option>
+            </select>
         </p>
+
         <button type="submit">Submit</button>
     </form>
     {% for todo in todos %}
-            <div class="todo">
-                <p>{{ todo['content'] }} <i>({{ todo['degree']}})</i></p>
-                <form method="POST" action="{{ url_for('delete', id=todo['_id']) }}" >
-                    <input type="submit" value="Delete Todo"
-                           onclick="return confirm('Are you sure you want to delete this entry?')">
-                </form>
-            </div>
-        {% endfor %}
+        <div class="todo">
+            <p>{{ todo['content'] }} <i>({{ todo['priority']}})</i> <i>({{ todo['status']}})</i></p>
+            <form method="POST" action="{{ url_for('delete', id=todo['_id']) }}" >
+                <input type="submit" value="Delete Todo"
+                       onclick="return confirm('Are you sure you want to delete this entry?')">
+            </form>
+        </div>
+    {% endfor %}
     </div>
     <br>
-<a href="/logged_in">Go back</a>
+    <a href="/logged_in">Go back</a>
 </body>
 </html>
