--- a/templates/mytodo_index.html
+++ b/templates/mytodo_index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Flask TODO</title>
     <style>
+        body {
+            background-color: #b1e3de; /* Change this to the desired color */
+        }
+
         .todo {
             padding: 20px;
             margin: 10px;
